--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,9 @@
-{ "semi": true, "singleQuote": true }
+{
+  "endOfLine": "lf",
+  "printWidth": 80,
+  "semi": false,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "useTabs": false
+}
