--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "lint": "eslint src --ext ts"
   },
   "devDependencies": {
+    "@bothrs/eslint-config": "^1.3.0",
     "@types/glob": "^7.1.4",
     "@types/node": "14.x",
     "@types/vscode": "^1.61.0",
