--- a/package.json
+++ b/package.json
@@ -64,16 +64,21 @@
   "devDependencies": {
     "@bothrs/eslint-config": "^1.3.0",
     "@types/glob": "^7.1.4",
+    "@types/mustache": "^4.1.2",
     "@types/node": "14.x",
     "@types/vscode": "^1.61.0",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "@vscode/test-electron": "^1.6.2",
     "eslint": "^8.1.0",
+    "file-loader": "^6.2.0",
     "glob": "^7.1.7",
     "ts-loader": "^9.2.5",
     "typescript": "^4.4.4",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
+  },
+  "dependencies": {
+    "mustache": "^4.2.0"
   }
 }
